[package]
name = "thin-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.34.0"
glium-types = "0.2.0"
winit = "0.29.15"
winit-input-map = { version = "0.1.1", features = ["glium-types"] }
