[package]
name = "thin-engine"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC-BY-4.0"
keywords = ["gamedev", "engine", "game"]
repository = "https://github.com/abyss-witch/thin-engine"
readme = "README.md"
description = "A thin engine between glium, winit, glium-types and winit-input-map with some extra helper functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "text"
required-features = ["text"]

[features]
text = ["dep:fontdue"]

[dependencies]
gilrs = "0.11.0"
glium = "0.36.0"
glium-types = "0.6.1"
winit = "0.30.8"
fontdue = { version = "0.9.2", optional = true }

winit-input-map = { version = "0.5.0", features = ["glium-types"] }
